[package]
name = "rust-bybit"
version = "0.2.0"
license = "MIT"
authors = ["jukanntenn <jukanntenn@outlook.com>"]
edition = "2021"

description = "Rust API connector for Bybit's WebSocket V5 API"
keywords = ["cryptocurrency", "trading", "bybit"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
documentation = "https://docs.rs/crate/rust-bybit/"
repository = "https://github.com/yufuquant/rust-bybit"
readme = "README.md"

[lib]
name = "bybit"
path = "src/lib.rs"

[dependencies]
tungstenite = { version = "0.18", features = ["native-tls"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
serde_derive = "1.0.104"
tokio = { version = "1.0.1", features = ["full"] }
futures = "0.3.5"
reqwest = { version = "0.11.14", features = [
    "json",
    "default",
    "socks",
    "blocking",
    "stream",
] }
http = "0.2.9"
# encryption
sha2 = "0.9.3"
hmac = "0.10.1"
hex = "0.4.3"
regex = "1.5"
async-trait = "0.1"
openssl = "0.10.56"
url = "2.2.0"
dotenv = "0.15.0"
ring = "0.16.20"
serde_urlencoded = "0.7.1"
once_cell = "1.18.0"
hmac-sha256 = "1.1.7"


[dev-dependencies]
env_logger = "0.10"
